--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
                     </div>
                 </div>
                 <div class="contact-item">
-                    <div class="contact-icon">💼</div>
+                    <div class="contact-icon"></div>
                     <div>
                         <h3>LinkedIn</h3>
                         <p><a href="https://www.linkedin.com/in/ayush-pathak-2054a536a/?trk=public-profile-join-page"><img src = "https://i.postimg.cc/YCpXxyZV/linkedin.jpg"height="37"></a>
@@ -614,7 +614,7 @@
                     </div>
                 </div>
                 <div class="contact-item">
-                    <div class="contact-icon">📷</div>
+                    <div class="contact-icon"></div>
                     <div>
                         <h3>Github</h3>
                         <p><a href="https://github.com/"><img src = "https://i.postimg.cc/RZppgLcT/GITHUB.png" height="40"></a>
