--- a/index.html
+++ b/index.html
@@ -608,9 +608,8 @@
                 <div class="contact-item">
                     <div class="contact-icon"></div>
                     <div>
-                        <h3>LinkedIn</h3>
-                        <p><a href="https://www.linkedin.com/in/ayush-pathak-2054a536a/?trk=public-profile-join-page"><img src = "https://i.postimg.cc/YCpXxyZV/linkedin.jpg"height="37"></a>
-                 
+                        <p><a href="https://www.linkedin.com/in/ayush-pathak-2054a536a/?trk=public-profile-join-page"><img src = "https://i.postimg.cc/YCpXxyZV/linkedin.jpg"height="37"></a>  <h3>LinkedIn</h3>
+                       
                     </div>
                 </div>
                 <div class="contact-item">
