--- a/index.html
+++ b/index.html
@@ -606,10 +606,10 @@
                     </div>
                 </div>
                 <div class="contact-item">
-                    <div class="contact-icon"></div>
+                    <div class="contact-icon"> <p><a href="https://www.linkedin.com/in/ayush-pathak-2054a536a/?trk=public-profile-join-page"><img src = "https://i.postimg.cc/YCpXxyZV/linkedin.jpg"height="37"></a></div>
                     <div>
-                        <p><a href="https://www.linkedin.com/in/ayush-pathak-2054a536a/?trk=public-profile-join-page"><img src = "https://i.postimg.cc/YCpXxyZV/linkedin.jpg"height="37"></a>  <h3>LinkedIn</h3>
-                       
+                        <h3>LinkedIn</h3>
+                 
                     </div>
                 </div>
                 <div class="contact-item">
