--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
     <section id="hero" class="hero">
         <div class="hero-content">
             <h1>AYUSH PATHAK</h1>
-            <p class="subtitle">Tech Enthusiast | AI Explorer | Hard Working & Enthusiastic</p>
+            <p class="subtitle"> Engineering Student | AI Explorer | Tech Enthusiast </p>
             <p class="description">
                 A dedicated and hard-working individual with great enthusiasm for capturing moments through photography and exploring the endless possibilities of artificial intelligence. 
                 Always ready to embrace new technologies and create innovative solutions with unwavering passion and commitment.
@@ -606,17 +606,17 @@
                     </div>
                 </div>
                 <div class="contact-item">
-                    <div class="contact-icon"> <p><a href="https://www.linkedin.com/in/ayush-pathak-2054a536a/?trk=public-profile-join-page"><img src = "https://i.postimg.cc/YCpXxyZV/linkedin.jpg"height="37"></a></div>
+                    <div class="contact-icon"> <a href="https://www.linkedin.com/in/ayush-pathak-2054a536a/?trk=public-profile-join-page"><img src = "https://i.postimg.cc/YCpXxyZV/linkedin.jpg"height="37"></a></div>
                     <div>
                         <h3>LinkedIn</h3>
                  
                     </div>
                 </div>
                 <div class="contact-item">
-                    <div class="contact-icon"></div>
-                    <div>
+                    <div class="contact-icon"> <a href="https://github.com/"><img src = "https://i.postimg.cc/RZppgLcT/GITHUB.png" height="40"></a></div>
+                    <h1>     </h1><div>
+
                         <h3>Github</h3>
-                        <p><a href="https://github.com/"><img src = "https://i.postimg.cc/RZppgLcT/GITHUB.png" height="40"></a>
                     </div>
                 </div>
                 <div class="contact-item">
