--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
                     </div>
                 </div>
                 <div class="contact-item">
-                    <div class="contact-icon"> <a href="https://www.linkedin.com/in/ayush-pathak-2054a536a/?trk=public-profile-join-page"><img src = "https://i.postimg.cc/YCpXxyZV/linkedin.jpg"height="37"></a></div>
+                    <div class="contact-icon"> <a href="https://www.linkedin.com/in/ayush-pathak-4b184736a/"><img src = "https://i.postimg.cc/YCpXxyZV/linkedin.jpg"height="37"></a></div>
                     <div>
                         <h3>LinkedIn</h3>
                  
