--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
                 <div class="contact-item">
                     <div class="contact-icon"> <a href="https://www.linkedin.com/in/ayush-pathak-4b184736a/"><img src = "https://i.postimg.cc/YCpXxyZV/linkedin.jpg"height="37"></a></div>
                     <div>
-                        <h3>LinkedI</h3>
+                        <h3>LinkedIn</h3>
                  
                     </div>
                 </div>
