--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
             <div class="about-image">
                 <div class="profile-image">
                     <!-- Replace 'your-photo-url-here' with the actual URL of your uploaded photo -->
-                    <img src="https://i.postimg.cc/zDt2K3G8/HHH.jpg" alt="Ayush Pathak" style="display: none;" onload="this.style.display='block'; this.parentElement.innerHTML=this.outerHTML;">
+                    <img src="" alt="Ayush Pathak" style="display: none;" onload="this.style.display='block'; this.parentElement.innerHTML=this.outerHTML;">
                     <div style="text-align: center;">
                         <div style="font-size: 2rem; margin-bottom: 1rem;">📸</div>
             
